# TTourney

./: README.md  pyproject.toml
dev/: generate_players.py
examples/: simulate_tournament.py
src/ttourney/: __init__.py
src/ttourney/db/: database.py  models.py
src/ttourney/examples/: __init__.py  tournaments.py
src/ttourney/models/: group.py  match.py  player.py  round.py  tournament.py
src/ttourney/simulation/: tournaments.py
