[project]
name = "TTourney"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "munch>=4.0.0",
    "pyarrow>=18.1.0",
    "sqlalchemy>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "ruff>=0.8.6",
]
